--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport"
     content="height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">
   <title>my-web</title>
 </head>
 
